@@ -5,6 +5,7 @@ version 0.4.1 - dd-mmm-yyyy
  . Demo: ClickAndMove demo working again (issue 12)
  . Director: added eventsEnabled. You can enable/disabled touch events globally (eg: Transitions want this feature)
  . Director: implementation file reorganized
+ . Director: drawScene renamed to mainLoop
  . Transitions: Added new ZoomFlipXTransition transition.
  . Transitions: Added new ZoomFlipYTransition transition.
  . Transitions: Added new ZoomFlipAngularTransition transition.
